--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
     "mongoose": "^8.1.3",
+    "puppeteer": "^22.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
