--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/swagger": "^7.3.0",
     "mongoose": "^8.1.3",
     "puppeteer": "^22.1.0",
     "reflect-metadata": "^0.2.0",
